--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,4 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/white"
+        android:title="White"
+        android:orderInCategory="100"
+        />
+
+        <item
+            android:id="@+id/green"
+            android:title="Green"
+            android:orderInCategory="200"
+            />
+
+            <item
+                android:id="@+id/red"
+                android:title="Red"
+                android:orderInCategory="300"
+                />
+
+                <item
+                    android:id="@+id/blue"
+                    android:title="Blue"
+                    android:orderInCategory="400"
+                    />
+
 
 </menu>
