--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -2,23 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".NextActivity">
 
     <Button
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_back"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
-        android:text="Next"
+        android:onClick="back"
+        android:text="Back"
         android:textColor="#FFFFFF"
         android:textColorHighlight="@color/colorPrimary"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:onClick="next"/>
+        android:textStyle="bold" />
 
 </LinearLayout>
